# Aboria

./: .gitignore  .travis.yml  ABORIA_BINARY_FUNCTION.html  ABORIA_BINARY_FUNCTION_idm45055404255920.html  ABORIA_BINARY_FUNCTION_idm45358942120400.html  ABORIA_BINARY_FUNCTION_idm45398110316000.html  ABORIA_BINARY_FUNCTION_idm45423526349824.html  ABORIA_BINARY_FUNCTION_idm45563353624336.html  ABORIA_BINARY_FUNCTION_idm45665595170560.html  ABORIA_BINARY_FUNCTION_idm45743416946688.html  ABORIA_BINARY_FUNCTION_idm45951549955280.html  ABORIA_BINARY_FUNCTION_idm46192779764048.html  ABORIA_BINARY_FUNCTION_idm46260559065088.html  ABORIA_BINARY_FUNCTION_idp46466769287984.html  ABORIA_BINARY_FUNCTION_idp46577198334944.html  ABORIA_BINARY_FUNCTION_idp46647393023904.html  ABORIA_BINARY_FUNCTION_idp46672722963440.html  ABORIA_BINARY_FUNCTION_idp46694606177216.html  ABORIA_BINARY_FUNCTION_idp46713114996096.html  ABORIA_BINARY_FUNCTION_idp46721874724384.html  ABORIA_BINARY_FUNCTION_idp46788868037024.html  ABORIA_BINARY_FUNCTION_idp46821656410432.html  ABORIA_BINARY_FUNCTION_idp46831083278768.html  ABORIA_BINARY_FUNCTION_idp46880762728496.html  ABORIA_BINARY_FUNCTION_idp46904995683984.html  ABORIA_BINARY_FUNCTION_idp46958967315648.html  ABORIA_BINARY_FUNCTION_idp46973437093424.html  ABORIA_BINARY_FUNCTION_idp46974078930544.html  ABORIA_BINARY_FUNCTION_idp47021788240240.html  ABORIA_BINARY_FUNCTION_idp47083167602592.html  ABORIA_BINARY_FUNCTION_idp47088899787120.html  ABORIA_BINARY_FUNCTION_idp47117454649424.html  ABORIA_BINARY_FUNCTION_idp47118311753664.html  ABORIA_BINARY_FUNCTION_idp47280546306896.html  ABORIA_BINARY_FUNCTION_idp47456819633136.html  ABORIA_BINARY_FUNCTION_idp47491138919520.html  ABORIA_BINARY_FUNCTION_idp47509093496752.html  ABORIA_BINARY_FUNCTION_idp47530045099376.html  ABORIA_BINARY_FUNCTION_idp47652180959904.html  ABORIA_LOG_LEVEL.html  (+322 more)
Aboria/: ABORIA_B_idm45563353635776.html  ABORIA_B_idm45563353662352.html  ABORIA_B_idm45951549966720.html  ABORIA_B_idm45951549993296.html  ABORIA_B_idp46466769252000.html  ABORIA_B_idp46466769277296.html  ABORIA_B_idp46577198298864.html  ABORIA_B_idp46577198324160.html  ABORIA_B_idp46647392987824.html  ABORIA_B_idp46647393013120.html  ABORIA_B_idp46672722927360.html  ABORIA_B_idp46672722952656.html  ABORIA_B_idp46694606141600.html  ABORIA_B_idp46694606166464.html  ABORIA_B_idp46713114960016.html  ABORIA_B_idp46713114985312.html  ABORIA_B_idp46721874688304.html  ABORIA_B_idp46721874713600.html  ABORIA_B_idp46788868001424.html  ABORIA_B_idp46788868026720.html  ABORIA_B_idp46821656374352.html  ABORIA_B_idp46821656399648.html  ABORIA_B_idp46831083242688.html  ABORIA_B_idp46831083267984.html  ABORIA_B_idp46880762692416.html  ABORIA_B_idp46880762717712.html  ABORIA_B_idp46904995648000.html  ABORIA_B_idp46904995673296.html  ABORIA_B_idp46958967279568.html  ABORIA_B_idp46958967304864.html  ABORIA_B_idp46973437057824.html  ABORIA_B_idp46973437082640.html  ABORIA_B_idp46974078894464.html  ABORIA_B_idp46974078919760.html  ABORIA_B_idp47021788204160.html  ABORIA_B_idp47021788229456.html  ABORIA_B_idp47083167566880.html  ABORIA_B_idp47083167591808.html  ABORIA_B_idp47088899751040.html  ABORIA_B_idp47088899776336.html  (+3491 more)
Eigen/: NumTrait_idm45004270376768.html  NumTrait_idm45227995565248.html  (+7 more)
aboria/: api_overview.html  (+20 more)
doc/: CMakeLists.txt  Jamroot  aboria.qbk  abstract.qbk  benchmarks.qbk  container.qbk  create.qbk  examples.qbk  installation.qbk  introduction.qbk  linear_algebra.qbk  neighbourhood.qbk  quick.qbk  reference.qbk  symbolic.qbk  user-config.jam
doc/cmake/: FindBoostBook.cmake  FindDocumentation.cmake  FindFOP.cmake  FindParseArguments.cmake  FindReference.cmake  FindXSLTransform.cmake
doc/css/: boostbook.css
examples/dem_symbolic/: CMakeLists.txt  dem_symbolic.cpp
examples/sph/: CMakeLists.txt  Visualisation.h  makefile  sph.cpp  sph.h  sph_common.h
examples/sphdem/: CMakeCache.txt  CMakeLists.txt  Makefile  Untitled Document  Visualisation.h  cmake_install.cmake  sph_common.h  sphdem  sphdem.cpp  sphdem.h  sphdem.h~
python/: CMakeLists.txt  Python.cpp  Python.h  Vector.cpp  python.cpp  python.py  python_template.cpp
src/: Aboria.cpp  Aboria.h  Algorithms.h  Assemble.h  BallTree.h  BreadthFirstSearch.h  BucketSearch2.h  BucketSearchParallel.h  BucketSearchSerial.h  BucketSort.cpp  BucketSort.h  CMakeLists.txt  CellList.h  CellListOrdered.h  Chebyshev.h  Constants.h  CudaInclude.h  Data.h  DataVector.h  DualBreadthFirstSearch.h  Elements.h  Evaluate.h  FastMultipoleMethod.h  Functions.h  Geometry.cpp  Geometry.h  Geometry_To_Port.h  Get.h  H2Lib.h  H2Matrix.h  KdTree.h  Kdtree.h  Kernels.h  LatticeIterator.h  Level1.h  Log.h  MultiLevelSchwartzPreconditioner.h  MyRandom.h  NanoFlannAdaptor.h  NeighbourSearchBase.h  (+32 more)
src/Iterators/: BalltreeIterators.h  BreadthFirstSearch.h  DualBreadthFirstSearch.h  SubsampleTreeQuery.h
src/Preconditioners/: CardinalFunctionsPreconditioner.h  MultiGridPreconditioner.h  NystromPreconditioner.h  ReducedOrderPreconditioner.h  SchwartzPreconditioner.h
src/Preconditioners/detail/: Preconditioners.h
src/SpatialDataStructures/: BallTree.h  CellList.h  CellListOrdered.h  Kdtree.h  NanoFlannAdaptor.h  OctTree.h
src/detail/: Algorithms.h  Chebyshev.h  Contexts.h  DefaultEval.h  Distance.h  Domains.h  Evaluate.h  Expressions.h  FastMultipoleMethod.h  GaussLegendre.h  Get.h  GetterType.h  Grammars.h  H2Lib.h  Helpers.h  Kernels.h  LowRank.h  Operators.h  Particles.h  SpatialUtil.h  Symbolic.h  SymbolicAssignment.h  Terminal.h
tests/: CMakeLists.txt  assemble.h  bd.h  bem.h  benchmark_fmm.h  benchmark_hpc.h  chebyshev.h  constructors.h  data_structures.h  dem.h  diffusion_around_spheres.h  doc_getting_started.h  example_container.h  fmm.h  fmm.py  fput.h  geometry.h  h2.h  id_search.h  iterators.h  linear_algebra_compare.h  matrix_multiply_scaling.m  md.h  md_level1.h  md_verlet.h  metafunctions.h  neighbours.h  operators.h  parallel.h  particle_container.h  plotting.py  rbf_interpolation.h  rbf_param_sweep.h  rbf_pde.h  rbf_pde.py  rbf_stokes.h  run_matlab.sh  spatial_utils.h  speed_test.h  sph.h  (+4 more)
(+2011 files in other folders)
