
LINK_DIRECTORIES(${Tyche_BINARY_DIR}/lib)
set(CMAKE_CPP_FLAGS_DEBUG  "${CMAKE_CPP_FLAGS_DEBUG} -DBOOST_DEBUG_PYTHON" )
include_directories(${Tyche_INCLUDE_DIRECTORIES} ${PYTHON_INCLUDE_DIRS})
PYTHON_ADD_MODULE(pyTyche python.cpp)

TARGET_LINK_LIBRARIES(pyTyche Tyche ${Boost_LIBRARIES})
install (TARGETS pyTyche DESTINATION lib)